Fixed issue with gap on mobile

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -5,6 +5,9 @@
   align-items: center;
   min-height: 100vh;
   padding-top: 50px;
+  width: 100%;
+  box-sizing: border-box;
+  overflow-x: hidden; /* Prevent horizontal overflow */
 }
 
 .container {
@@ -13,12 +16,14 @@
   align-items: center;
   justify-content: center;
   height: auto;
-  width: 80vw;
+  width: 100%;
+  max-width: 90vw;
   text-align: center;
   background-color: #682bd7;
   padding: 50px 20px;
   border-radius: 10px;
   margin-top: 20px;
+  box-sizing: border-box;
 }
 
 .mainHeader {
@@ -40,14 +45,17 @@
 }
 
 .sectionsContainer {
-  width: 80vw;
+  width: 100%;
+  max-width: 90vw;
   margin-top: 50px;
+  box-sizing: border-box;
 }
 
 .section {
   margin-bottom: 40px;
   padding: 10px;
   border-radius: 10px;
+  box-sizing: border-box;
 }
 
 .sectionHeader {
